// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatbotConstruct スナップショットテスト TC-CHATBOT-001: Chatbot 有効時テンプレートスナップショット Chatbot 有効時テンプレートがスナップショットと一致すること 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ChatbotChatbotRole9A47BC97": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "chatbot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "IAM Role for prod AWS Chatbot",
        "RoleName": "prod-chatbot-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "ChatbotChatbotRoleDefaultPolicy0120FBE2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "cloudwatch:Describe*",
                "cloudwatch:Get*",
                "cloudwatch:List*",
                "logs:Describe*",
                "logs:Get*",
                "logs:FilterLogEvents",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ChatbotChatbotRoleDefaultPolicy0120FBE2",
        "Roles": [
          {
            "Ref": "ChatbotChatbotRole9A47BC97",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ChatbotSlackChannelB6114F2F": {
      "Properties": {
        "ConfigurationName": "prod-alarm-notifications",
        "IamRoleArn": {
          "Fn::GetAtt": [
            "ChatbotChatbotRole9A47BC97",
            "Arn",
          ],
        },
        "LoggingLevel": "INFO",
        "SlackChannelId": "C12345678",
        "SlackWorkspaceId": "T12345678",
        "SnsTopicArns": [
          {
            "Ref": "TestTopic339EC197",
          },
        ],
      },
      "Type": "AWS::Chatbot::SlackChannelConfiguration",
    },
    "TestTopic339EC197": {
      "Properties": {
        "TopicName": "test-alarm-topic",
      },
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`ChatbotConstruct スナップショットテスト TC-CHATBOT-002: Chatbot 無効時テンプレートスナップショット Chatbot 無効時テンプレートがスナップショットと一致すること 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "TestTopic339EC197": {
      "Properties": {
        "TopicName": "test-alarm-topic",
      },
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
